--- a/02_transit_analysis.ipynb
+++ b/02_transit_analysis.ipynb
@@ -773,11 +773,35 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The stellar radius is around 1.66 $R_{sun}$ and the value of the planet-star radius ratio is 0.1181 $\\pm$ 0.0020. So we can estimate the radius of the planet with this formula: $R_{planet}$ = $ratio$ x $R_{star}$ (from $ratio$ = $R_{planet}$ \\ $R_{star}$). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.9077547445868066 jupiterRad\n"
+     ]
+    }
+   ],
+   "source": [
+    "import astropy.units as u\n",
+    "\n",
+    "ratio = 0.1181\n",
+    "r_star = (1.66 * u.Rsun).to(u.meter)\n",
+    "\n",
+    "r_planet = ratio * r_star\n",
+    "r_planet_j = r_planet.to(u.Rjup)\n",
+    "print(r_planet_j)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -785,11 +809,43 @@
    "source": [
     "2. Compare the stellar density ($\\rho$) estimated from the transit modelling to the theoretical stellar density for a WASP-12-like star.\n",
     "\n",
-    "- Answer.\n",
+    "The stellar density estimated from the transit modelling is 0.4359 $\\pm$ 0.0376 $\\text{g/cm}^3$ for a WASP-12-like star, while the theoretical stellar density is around 1.196 $\\text{g/cm}^3$ for a G0V type star with typical values for the mass and the radius equal to $M_{star}$=1.06 $M_{sun}$ and $R_{star}$=1.01 $R_{sun}$.  There is a big difference between the theoretical value and the value we have obtained through the transit method, this could be because the radius of this star is around 1.66 $R_{sun}$, that is bigger than the one we have used to compute the theoretical density."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.1961214911924758 g / cm3\n"
+     ]
+    }
+   ],
+   "source": [
+    "r_star = (1.06 * u.Rsun).to(u.cm)\n",
+    "m_star = (1.01 * u.Msun).to(u.g) \n",
+    "pi = 3.14\n",
     "\n",
+    "vol_star = 4/3 * pi * (r_star**3)\n",
+    "density = m_star/vol_star\n",
+    "\n",
+    "print(density)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "3. From the plot above you can see that many of the parameters are correlated with each other. What does this mean in practice?\n",
     "\n",
-    "- Answer.\n"
+    "The diagonal of the plot displays the posterior probability distributions, while the remaining parts of the plot show two-dimensional covariance plots for the parameters. The contours in these 2D covariance plots represent areas where the posterior density is constant. If the 2D shapes appear more spherical, it indicates a low correlation. Conversely, high correlation is suggested by elongated and stretched shapes.\n",
+    "The corner plot reveals a strong correlation between the impact parameter (b) and both the planet-star radius ratio (k) and star density ($\\rho$). The limb darkening parameters, q1_r and q2_r, are also highly correlated with each other and with the parameter k.\n",
+    "The parameters showing the least correlation are those for limb darkening with rho and b, as indicated by their more circular shape.\n",
+    "The existence of these correlations implies that we cannot treat each parameter as independent. Therefore, gaining a deeper understanding of these correlations could aid us in constructing new models for exoplanetary systems and potentially developing new techniques for observation and investigation."
    ]
   },
   {
@@ -817,7 +873,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
